--- a/index.html
+++ b/index.html
@@ -1,103 +1,75 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Message Scheduler</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class'
-      }
-    </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Post Downloader</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body { background-color: #111827; color: white; }
+    input, button { outline: none; }
+  </style>
 </head>
-<body class="bg-gray-900 text-white font-sans">
-    <div class="max-w-xl mx-auto mt-10 p-6 bg-gray-800 rounded-lg shadow">
-        <h1 class="text-2xl font-bold text-center mb-4">WhatsApp Message Scheduler</h1>
+<body class="min-h-screen flex items-center justify-center p-4">
+  <div class="max-w-xl w-full bg-gray-800 p-6 rounded-xl shadow-xl">
+    <h1 class="text-2xl font-bold mb-4 text-center">Instagram Post Downloader</h1>
+    <p class="text-sm mb-4 text-center">Download foto dan video dari Instagram tanpa login.</p>
+    <input id="igUrl" type="text" placeholder="Paste Instagram link here..." class="w-full p-2 rounded mb-4 text-black" />
+    <button onclick="getDownloadLink()" class="w-full bg-blue-600 hover:bg-blue-700 p-2 rounded">Download</button>
 
-        <form id="scheduleForm" class="space-y-4">
-            <div>
-                <label class="block font-medium">Nomor WhatsApp (format internasional)</label>
-                <input type="text" id="number" class="w-full p-2 border rounded bg-gray-700 text-white" placeholder="Contoh: 6281234567890" required>
-            </div>
-            <div>
-                <label class="block font-medium">Pesan</label>
-                <textarea id="message" class="w-full p-2 border rounded bg-gray-700 text-white" rows="3" required></textarea>
-            </div>
-            <div>
-                <label class="block font-medium">Jadwal Kirim</label>
-                <input type="datetime-local" id="scheduleTime" class="w-full p-2 border rounded bg-gray-700 text-white" required>
-            </div>
-            <button type="submit" class="w-full bg-green-500 text-white py-2 rounded hover:bg-green-600">Jadwalkan Pesan</button>
-        </form>
-
-        <div id="scheduledList" class="mt-6">
-            <h2 class="text-lg font-semibold mb-2">Pesan Terjadwal</h2>
-            <ul id="messages" class="space-y-2"></ul>
-        </div>
+    <div id="result" class="mt-6 hidden">
+      <p class="text-sm mb-2">Download Link:</p>
+      <a id="downloadLink" href="#" target="_blank" class="text-blue-400 hover:underline break-words"></a>
     </div>
 
-    <script>
-        const form = document.getElementById('scheduleForm');
-        const messagesList = document.getElementById('messages');
+    <div id="error" class="mt-4 text-red-500 hidden text-sm text-center">Link tidak valid atau gagal diproses.</div>
 
-        let schedules = JSON.parse(localStorage.getItem('waSchedules')) || [];
-        displaySchedules();
+    <!-- Monetisasi -->
+    <div class="mt-8 text-center text-sm text-gray-400 border-t pt-4">
+      Powered by <a href="https://rapidapi.com/" class="underline">Instagram120 API via RapidAPI</a> | Monetized by ads/affiliate
+    </div>
+  </div>
 
-        form.addEventListener('submit', function(e) {
-            e.preventDefault();
-            const number = document.getElementById('number').value;
-            const message = document.getElementById('message').value;
-            const time = new Date(document.getElementById('scheduleTime').value);
+  <script>
+    async function getDownloadLink() {
+      const url = document.getElementById("igUrl").value.trim();
+      const resultDiv = document.getElementById("result");
+      const errorDiv = document.getElementById("error");
+      const downloadLink = document.getElementById("downloadLink");
 
-            const schedule = { number, message, time: time.toISOString() };
-            schedules.push(schedule);
-            localStorage.setItem('waSchedules', JSON.stringify(schedules));
-            displaySchedules();
-            form.reset();
+      resultDiv.classList.add("hidden");
+      errorDiv.classList.add("hidden");
+
+      if (!url.includes("instagram.com")) {
+        errorDiv.textContent = "Link bukan dari Instagram.";
+        errorDiv.classList.remove("hidden");
+        return;
+      }
+
+      try {
+        const response = await fetch(`https://instagram120.p.rapidapi.com/api/instagram/hls?url=${encodeURIComponent(url)}`, {
+          method: 'GET',
+          headers: {
+            'x-rapidapi-host': 'instagram120.p.rapidapi.com',
+            'x-rapidapi-key': 'ff182f8c00msh458890f7aca3472p136856jsn6e0b29c02e5c'
+          }
         });
 
-        function displaySchedules() {
-            messagesList.innerHTML = '';
-            schedules.forEach((item, index) => {
-                const li = document.createElement('li');
-                const time = new Date(item.time);
-                const formattedTime = time.toLocaleDateString() + ' ' + time.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+        const data = await response.json();
 
-                li.className = 'p-3 bg-gray-700 text-white rounded border border-gray-600 flex justify-between items-center';
-                li.innerHTML = `
-                    <div>
-                        <p class="font-semibold">${item.number}</p>
-                        <p>${item.message}</p>
-                        <p class="text-sm text-gray-300">Dijadwalkan: ${formattedTime}</p>
-                    </div>
-                    <button onclick="removeSchedule(${index})" class="text-red-400 hover:underline">Hapus</button>
-                `;
-                messagesList.appendChild(li);
-            });
+        if (data && data.url) {
+          downloadLink.href = data.url;
+          downloadLink.textContent = data.url;
+          resultDiv.classList.remove("hidden");
+        } else {
+          throw new Error("Invalid response");
         }
-
-        function removeSchedule(index) {
-            schedules.splice(index, 1);
-            localStorage.setItem('waSchedules', JSON.stringify(schedules));
-            displaySchedules();
-        }
-
-        setInterval(() => {
-            const now = new Date();
-            schedules = schedules.filter(schedule => {
-                const sendTime = new Date(schedule.time);
-                if (now >= sendTime) {
-                    alert(`Saatnya kirim pesan ke ${schedule.number}`);
-                    const url = `https://wa.me/${schedule.number}?text=${encodeURIComponent(schedule.message)}`;
-                    window.location.href = url;
-                    return false;
-                }
-                return true;
-            });
-            localStorage.setItem('waSchedules', JSON.stringify(schedules));
-            displaySchedules();
-        }, 5000);
-    </script>
+      } catch (e) {
+        console.error(e);
+        errorDiv.textContent = "Link tidak valid atau gagal diproses.";
+        errorDiv.classList.remove("hidden");
+      }
+    }
+  </script>
 </body>
 </html>
