--- a/index.html
+++ b/index.html
@@ -1,76 +1,219 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Instagram Post Downloader</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Admin - Etalase Buku Cerita</title>
+  <meta name="description" content="Panel admin untuk mengelola konten buku di Etalase Buku Cerita." />
+  <meta name="keywords" content="admin, etalase buku, cerita, manajemen konten" />
+  <meta property="og:title" content="Admin Etalase Buku Cerita" />
+  <meta property="og:description" content="Kelola dan tambahkan buku cerita digital Anda di sini." />
+  <meta property="og:image" content="https://via.placeholder.com/600x400?text=Admin+Buku" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://amdf.web.id/admin.html" />
   <style>
-    body { background-color: #111827; color: white; }
-    input, button { outline: none; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 0 15px;
+    }
+
+    form {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    input, textarea, button {
+      padding: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      background-color: #3498db;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #2980b9;
+    }
+
+    #book-list {
+      margin-top: 30px;
+    }
+
+    .book-item {
+      background: white;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+
+    .book-item img {
+      max-width: 100%;
+      border-radius: 4px;
+      margin-top: 10px;
+    }
+
+    .actions {
+      margin-top: 10px;
+    }
+
+    .actions button {
+      margin-right: 10px;
+      background-color: #e74c3c;
+    }
+
+    .actions button.edit {
+      background-color: #f39c12;
+    }
+
+    footer {
+      text-align: center;
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      margin-top: 40px;
+    }
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-4">
-  <div class="max-w-xl w-full bg-gray-800 p-6 rounded-xl shadow-xl">
-    <h1 class="text-2xl font-bold mb-4 text-center">Instagram Post Downloader</h1>
-    <p class="text-sm mb-4 text-center">Download foto dan video dari Instagram tanpa login.</p>
-    <input id="igUrl" type="text" placeholder="Paste Instagram link here..." class="w-full p-2 rounded mb-4 text-black" />
-    <button onclick="getDownloadLink()" class="w-full bg-blue-600 hover:bg-blue-700 p-2 rounded">Download</button>
+<body>
+  <header>
+    <h1>Admin Etalase Buku Cerita</h1>
+  </header>
+  <main>
+    <form id="book-form">
+      <input type="text" id="title" placeholder="Judul Buku" required />
+      <textarea id="description" placeholder="Deskripsi Buku" required></textarea>
+      <input type="file" id="thumbnail-file" accept="image/*" />
+      <button type="submit">Tambah Buku</button>
+    </form>
 
-    <div id="result" class="mt-6 hidden">
-      <p class="text-sm mb-2">Download Link:</p>
-      <a id="downloadLink" href="#" target="_blank" class="text-blue-400 hover:underline break-words"></a>
-    </div>
+    <section id="book-list">
+      <h2>Daftar Buku</h2>
+      <div id="book-items"></div>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; <span id="year"></span> Admin Etalase Buku Cerita. Semua Hak Dilindungi.</p>
+  </footer>
 
-    <div id="error" class="mt-4 text-red-500 hidden text-sm text-center">Link tidak valid atau gagal diproses.</div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+    import { getDatabase, ref, set, onValue, remove } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js";
+    import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js";
 
-    <!-- Monetisasi -->
-    <div class="mt-8 text-center text-sm text-gray-400 border-t pt-4">
-      Powered by <a href="https://rapidapi.com/" class="underline">Instagram120 API via RapidAPI</a> | Monetized by ads/affiliate
-    </div>
-  </div>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
+      authDomain: "tamplatedoc.firebaseapp.com",
+      databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "tamplatedoc",
+      storageBucket: "tamplatedoc.appspot.com",
+      messagingSenderId: "264966107720",
+      appId: "1:264966107720:web:868abe93cdff209040de7d"
+    };
 
-  <script>
-    async function getDownloadLink() {
-      const rawUrl = document.getElementById("igUrl").value.trim();
-      const url = rawUrl.split('?')[0]; // hapus query seperti ?utm_source=...
-      const resultDiv = document.getElementById("result");
-      const errorDiv = document.getElementById("error");
-      const downloadLink = document.getElementById("downloadLink");
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const storage = getStorage(app);
 
-      resultDiv.classList.add("hidden");
-      errorDiv.classList.add("hidden");
+    const form = document.getElementById('book-form');
+    const titleInput = document.getElementById('title');
+    const descInput = document.getElementById('description');
+    const fileInput = document.getElementById('thumbnail-file');
+    const bookItems = document.getElementById('book-items');
 
-      if (!url.includes("instagram.com")) {
-        errorDiv.textContent = "Link bukan dari Instagram.";
-        errorDiv.classList.remove("hidden");
-        return;
+    let editingKey = null;
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const title = titleInput.value;
+      const description = descInput.value;
+      const file = fileInput.files[0];
+      const key = editingKey || Date.now();
+
+      let thumbnail = "";
+
+      if (file) {
+        const fileRef = sRef(storage, 'thumbnails/' + key);
+        await uploadBytes(fileRef, file);
+        thumbnail = await getDownloadURL(fileRef);
       }
 
-      try {
-        const response = await fetch(`https://instagram120.p.rapidapi.com/api/instagram/hls?url=${encodeURIComponent(url)}`, {
-          method: 'GET',
-          headers: {
-            'x-rapidapi-host': 'instagram120.p.rapidapi.com',
-            'x-rapidapi-key': 'ff182f8c00msh458890f7aca3472p136856jsn6e0b29c02e5c'
+      const bookData = { title, description, thumbnail };
+      set(ref(db, 'books/' + key), bookData).then(() => {
+        form.reset();
+        editingKey = null;
+      });
+    });
+
+    onValue(ref(db, 'books/'), (snapshot) => {
+      const data = snapshot.val();
+      bookItems.innerHTML = '';
+      for (const key in data) {
+        const book = data[key];
+        const div = document.createElement('div');
+        div.className = 'book-item';
+        div.innerHTML = `
+          <h3>${book.title}</h3>
+          <p>${book.description}</p>
+          ${book.thumbnail ? `<img src="${book.thumbnail}" alt="Thumbnail">` : ''}
+          <div class="actions">
+            <button class="edit" data-id="${key}">Edit</button>
+            <button class="delete" data-id="${key}">Hapus</button>
+          </div>
+        `;
+        bookItems.appendChild(div);
+      }
+
+      document.querySelectorAll('.delete').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const id = btn.getAttribute('data-id');
+          if (confirm('Yakin ingin menghapus buku ini?')) {
+            remove(ref(db, 'books/' + id));
           }
         });
+      });
 
-        const data = await response.json();
+      document.querySelectorAll('.edit').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const id = btn.getAttribute('data-id');
+          const book = data[id];
+          titleInput.value = book.title;
+          descInput.value = book.description;
+          editingKey = id;
+        });
+      });
+    });
 
-        if (data && data.url) {
-          downloadLink.href = data.url;
-          downloadLink.textContent = data.url;
-          resultDiv.classList.remove("hidden");
-        } else {
-          throw new Error("Invalid response");
-        }
-      } catch (e) {
-        console.error(e);
-        errorDiv.textContent = "Link tidak valid atau gagal diproses.";
-        errorDiv.classList.remove("hidden");
-      }
-    }
+    document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
