--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             text-decoration: none;
         }
         .container {
-            max-width: 1200px;
+            max-width: 800px; /* Mengurangi lebar katalog */
             margin: 0 auto;
             padding: 24px 16px 48px 16px;
             flex: 1 0 auto;
@@ -134,6 +134,10 @@
             padding: 24px 16px;
             text-align: center;
             flex-shrink: 0;
+        }
+        footer a {
+            color: #00bfa5;
+            margin: 0 10px;
         }
         /* Modal styles */
         .modal-overlay {
@@ -298,6 +302,12 @@
         <section aria-label="Daftar ebook" class="ebook-grid" id="ebook-grid"></section>
     </main>
     <footer>
+        <div>
+            <a href="about.html">📖 About / Tentang Kami</a>
+            <a href="privacy.html">🔒 Privacy Policy / Kebijakan Privasi</a>
+            <a href="contact.html">☎️ Contact / Kontak Kami</a>
+            <a href="disclaimer.html">⚠️ Disclaimer</a>
+        </div>
         &copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.
     </footer>
 
@@ -321,22 +331,20 @@
 
     <script>
         // Konfigurasi Firebase (sama dengan yang digunakan di admin)
-  // Konfigurasi Firebase
-  const firebaseConfig = {
-    apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
-    authDomain: "tamplatedoc.firebaseapp.com",
-    databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "tamplatedoc",
-    storageBucket: "tamplatedoc.appspot.com",
-    messagingSenderId: "264966107720",
-    appId: "1:264966107720:web:868abe93cdff209040de7d",
-    measurementId: "G-S5WTZ7S5PG"
-  };
+        const firebaseConfig = {
+            apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
+            authDomain: "tamplatedoc.firebaseapp.com",
+            databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "tamplatedoc",
+            storageBucket: "tamplatedoc.appspot.com",
+            messagingSenderId: "264966107720",
+            appId: "1:264966107720:web:868abe93cdff209040de7d",
+            measurementId: "G-S5WTZ7S5PG"
+        };
 
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
-
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
 
         const ebookGrid = document.getElementById('ebook-grid');
         const modalOverlay = document.getElementById('modal-overlay');
