--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <main>
   <h2>Kontak Kami</h2>
   <p>
-    Silakan hubungi kami melalui email <a href="mailto:fahril0616@gmail.com">fahril0616@gmail.com</a> atau melalui media sosial:
+    Silakan hubungi kami melalui email <a href="mailto:fahril0616@gmail.com">info@amdf.web.id</a> atau melalui media sosial:
   </p>
   <ul>
     <li>Instagram: <a href="https://www.instagram.com/ahmad.fahril16/?utm_source=qr#" target="_blank">ahmad.fahril16</a></li>
