--- a/story.html
+++ b/story.html
@@ -141,72 +141,76 @@
     &copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.
   </footer>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
-      authDomain: "tamplatedoc.firebaseapp.com",
-      databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "tamplatedoc",
-      storageBucket: "tamplatedoc.appspot.com",
-      messagingSenderId: "264966107720",
-      appId: "1:264966107720:web:868abe93cdff209040de7d"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
+  authDomain: "tamplatedoc.firebaseapp.com",
+  databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "tamplatedoc",
+  storageBucket: "tamplatedoc.appspot.com",
+  messagingSenderId: "264966107720",
+  appId: "1:264966107720:web:868abe93cdff209040de7d"
+};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
 
-    const params = new URLSearchParams(window.location.search);
-    const id = params.get('id');
-    const content = document.getElementById('content');
+const params = new URLSearchParams(window.location.search);
+const id = params.get('id');
+const content = document.getElementById('content');
 
-    db.ref('cerita/' + id).once('value').then(snap => {
-      const cerita = snap.val();
-      if (!cerita) {
-        content.innerHTML = '<p>Cerita tidak ditemukan.</p>';
-        return;
-      }
+db.ref('cerita/' + id).once('value').then(snap => {
+  const cerita = snap.val();
+  if (!cerita) {
+    content.innerHTML = '<p>Cerita tidak ditemukan.</p>';
+    return;
+  }
 
-      content.innerHTML = `
-        <h1>${cerita.judul}</h1>
-        <p class="genre">Genre: ${cerita.genre}</p>
-        <img src="${cerita.gambar}" alt="Cover ${cerita.judul}" class="story-image" />
-        <div class="story-content">${cerita.isi.replace(/\n/g, '<br>')}</div>
-        <div class="audio-controls">
-          <button id="listenBtn" class="audio-btn">🔊 Dengarkan Cerita</button>
-          <button id="stopBtn" class="audio-btn" style="display:none;">⏹️ Stop</button>
-        </div>
-        <div class="back-control">
-          <a href="index.html" class="back-btn">🏠 Kembali ke Beranda</a>
-        </div>
-      `;
+  content.innerHTML = `
+    <h1>${cerita.judul}</h1>
+    <p class="genre">Genre: ${cerita.genre}</p>
+    <img src="${cerita.gambar}" alt="Cover ${cerita.judul}" class="story-image" />
+    <div class="story-content">${cerita.isi.replace(/\n/g, '<br>')}</div>
+    <div class="audio-controls">
+      <button id="listenBtn" class="audio-btn">🔊 Dengarkan Cerita</button>
+      <button id="stopBtn" class="audio-btn" style="display:none;">⏹️ Stop</button>
+    </div>
+    <div class="back-control">
+      <a href="index.html" class="back-btn">🏠 Kembali ke Beranda</a>
+    </div>
+  `;
 
-      const listenBtn = document.getElementById('listenBtn');
-      const stopBtn = document.getElementById('stopBtn');
-      const storyText = cerita.isi;
-      let speech = new SpeechSynthesisUtterance();
+  const listenBtn = document.getElementById('listenBtn');
+  const stopBtn = document.getElementById('stopBtn');
+  const storyText = cerita.isi;
 
-      listenBtn.addEventListener('click', () => {
-        speech.text = storyText;
-        speech.lang = 'id-ID';
-        speech.rate = 0.9;
-        speech.pitch = 1;
-        speech.volume = 1;
+  let speech = new SpeechSynthesisUtterance();
+  speech.lang = 'id-ID';
+  speech.rate = 0.9;
+  speech.pitch = 1;
+  speech.volume = 1;
 
-        window.speechSynthesis.speak(speech);
-        listenBtn.style.display = 'none';
-        stopBtn.style.display = 'inline-block';
-      });
+  listenBtn.addEventListener('click', () => {
+    if (window.speechSynthesis.speaking) {
+      window.speechSynthesis.cancel(); 
+    }
+    speech.text = storyText;
+    window.speechSynthesis.speak(speech);
+    listenBtn.style.display = 'none';
+    stopBtn.style.display = 'inline-block';
+  });
 
-      stopBtn.addEventListener('click', () => {
-        window.speechSynthesis.cancel();
-        stopBtn.style.display = 'none';
-        listenBtn.style.display = 'inline-block';
-      });
+  stopBtn.addEventListener('click', () => {
+    window.speechSynthesis.cancel();
+    stopBtn.style.display = 'none';
+    listenBtn.style.display = 'inline-block';
+  });
 
-      speech.onend = function() {
-        stopBtn.style.display = 'none';
-        listenBtn.style.display = 'inline-block';
-      };
-    });
-  </script>
+  speech.onend = function() {
+    stopBtn.style.display = 'none';
+    listenBtn.style.display = 'inline-block';
+  };
+});
+</script>
+
 </body>
 </html>
