--- a/story.html
+++ b/story.html
@@ -109,15 +109,6 @@
     footer a:hover {
       text-decoration: underline;
     }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.6rem;
-      }
-      .story-content {
-        font-size: 0.95rem;
-      }
-    }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -136,78 +127,75 @@
     &copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.
   </footer>
 
-<script>
-const firebaseConfig = {
-  apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
-  authDomain: "tamplatedoc.firebaseapp.com",
-  databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "tamplatedoc",
-  storageBucket: "tamplatedoc.appspot.com",
-  messagingSenderId: "264966107720",
-  appId: "1:264966107720:web:868abe93cdff209040de7d"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
+      authDomain: "tamplatedoc.firebaseapp.com",
+      databaseURL: "https://tamplatedoc-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "tamplatedoc",
+      storageBucket: "tamplatedoc.appspot.com",
+      messagingSenderId: "264966107720",
+      appId: "1:264966107720:web:868abe93cdff209040de7d"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
-const params = new URLSearchParams(window.location.search);
-const id = params.get('id');
-const content = document.getElementById('content');
+    const params = new URLSearchParams(window.location.search);
+    const id = params.get('id');
+    const content = document.getElementById('content');
 
-db.ref('cerita/' + id).once('value').then(snap => {
-  const cerita = snap.val();
-  if (!cerita) {
-    content.innerHTML = '<p>Cerita tidak ditemukan.</p>';
-    return;
-  }
+    db.ref('cerita/' + id).once('value').then(snap => {
+      const cerita = snap.val();
+      if (!cerita) {
+        content.innerHTML = '<p>Cerita tidak ditemukan.</p>';
+        return;
+      }
 
-  // Render konten cerita
-  content.innerHTML = `
-    <h1>${cerita.judul}</h1>
-    <p class="genre">Genre: ${cerita.genre}</p>
-    <img src="${cerita.gambar}" alt="Cover ${cerita.judul}" class="story-image" />
-    <div class="story-content">${cerita.isi.replace(/\n/g, '<br>')}</div>
-    <div class="controls">
-      <button class="btn" id="listenBtn">🔊 Dengarkan Cerita</button>
-      <button class="btn" id="stopBtn" style="display:none;">⏹️ Stop</button>
-      <a href="index.html" class="btn">🏠 Kembali ke Beranda</a>
-    </div>
-  `;
+      content.innerHTML = `
+        <h1>${cerita.judul}</h1>
+        <p class="genre">Genre: ${cerita.genre}</p>
+        <img src="${cerita.gambar}" alt="Cover ${cerita.judul}" class="story-image" />
+        <div class="story-content" id="storyText">${cerita.isi.replace(/\n/g, '<br>')}</div>
+        <div class="controls">
+          <button class="btn" id="listenBtn">🔊 Dengarkan Cerita</button>
+          <button class="btn" id="stopBtn" style="display:none;">⏹️ Stop</button>
+          <a href="index.html" class="btn">🏠 Kembali ke Beranda</a>
+        </div>
+      `;
 
-  // Setelah DOM sudah update baru kita siapkan SpeechSynthesis
-  const listenBtn = document.getElementById('listenBtn');
-  const stopBtn = document.getElementById('stopBtn');
-  const storyContent = document.querySelector('.story-content').textContent;
+      const listenBtn = document.getElementById('listenBtn');
+      const stopBtn = document.getElementById('stopBtn');
 
-  let speech = new SpeechSynthesisUtterance();
-  speech.lang = 'id-ID';
-  speech.rate = 0.9;
-  speech.pitch = 1;
-  speech.volume = 1;
+      let speech;
+      
+      listenBtn.addEventListener('click', () => {
+        if (window.speechSynthesis.speaking) {
+          window.speechSynthesis.cancel();
+        }
+        const plainText = document.getElementById('storyText').innerText;
+        speech = new SpeechSynthesisUtterance(plainText);
+        speech.lang = 'id-ID';
+        speech.rate = 0.9;
+        speech.pitch = 1;
+        speech.volume = 1;
 
-  listenBtn.addEventListener('click', () => {
-    if (window.speechSynthesis.speaking) {
-      window.speechSynthesis.cancel();
-    }
-    speech.text = storyContent;
-    window.speechSynthesis.speak(speech);
-    listenBtn.style.display = 'none';
-    stopBtn.style.display = 'inline-block';
-  });
+        speech.onend = function () {
+          stopBtn.style.display = 'none';
+          listenBtn.style.display = 'inline-block';
+        };
 
-  stopBtn.addEventListener('click', () => {
-    window.speechSynthesis.cancel();
-    stopBtn.style.display = 'none';
-    listenBtn.style.display = 'inline-block';
-  });
+        window.speechSynthesis.speak(speech);
+        listenBtn.style.display = 'none';
+        stopBtn.style.display = 'inline-block';
+      });
 
-  speech.onend = function() {
-    stopBtn.style.display = 'none';
-    listenBtn.style.display = 'inline-block';
-  };
-});
-</script>
-
-
+      stopBtn.addEventListener('click', () => {
+        window.speechSynthesis.cancel();
+        stopBtn.style.display = 'none';
+        listenBtn.style.display = 'inline-block';
+      });
+    });
+  </script>
 
 </body>
 </html>
