--- a/story.html
+++ b/story.html
@@ -144,57 +144,63 @@
     const id = params.get('id');
     const content = document.getElementById('content');
 
-    db.ref('cerita/' + id).once('value').then(snap => {
-      const cerita = snap.val();
-      if (!cerita) {
-        content.innerHTML = '<p>Cerita tidak ditemukan.</p>';
-        return;
-      }
-
-      content.innerHTML = `
-        <h1>${cerita.judul}</h1>
-        <p class="genre">Genre: ${cerita.genre}</p>
-        <img src="${cerita.gambar}" alt="Cover ${cerita.judul}" class="story-image" />
-        <div class="story-content" id="storyText">${cerita.isi.replace(/\n/g, '<br>')}</div>
-        <div class="controls">
-          <button class="btn" id="listenBtn">🔊 Dengarkan Cerita</button>
-          <button class="btn" id="stopBtn" style="display:none;">⏹️ Stop</button>
-          <a href="index.html" class="btn">🏠 Kembali ke Beranda</a>
-        </div>
-      `;
-
-      const listenBtn = document.getElementById('listenBtn');
-      const stopBtn = document.getElementById('stopBtn');
-      const storyText = document.getElementById('storyText').innerText;
-
-      let speech = new SpeechSynthesisUtterance();
-
-      listenBtn.addEventListener('click', () => {
-        if (window.speechSynthesis.speaking) {
-          window.speechSynthesis.cancel();
+    if (!id) {
+      content.innerHTML = '<p>ID cerita tidak ditemukan di URL.</p>';
+    } else {
+      db.ref('cerita/' + id).once('value').then(snap => {
+        const cerita = snap.val();
+        if (!cerita) {
+          content.innerHTML = '<p>Cerita tidak ditemukan.</p>';
+          return;
         }
-        speech.text = storyText;
-        speech.lang = 'id-ID';
-        speech.rate = 0.9;
-        speech.pitch = 1;
-        speech.volume = 1;
 
-        speech.onend = function () {
+        content.innerHTML = `
+          <h1>${cerita.judul}</h1>
+          <p class="genre">Genre: ${cerita.genre}</p>
+          <img src="${cerita.gambar}" alt="Cover ${cerita.judul}" class="story-image" />
+          <div class="story-content" id="storyText">${cerita.isi.replace(/\n/g, '<br>')}</div>
+          <div class="controls">
+            <button class="btn" id="listenBtn">🔊 Dengarkan Cerita</button>
+            <button class="btn" id="stopBtn" style="display:none;">⏹️ Stop</button>
+            <a href="index.html" class="btn">🏠 Kembali ke Beranda</a>
+          </div>
+        `;
+
+        const listenBtn = document.getElementById('listenBtn');
+        const stopBtn = document.getElementById('stopBtn');
+        const storyText = document.getElementById('storyText').innerText;
+
+        let speech = new SpeechSynthesisUtterance();
+
+        listenBtn.addEventListener('click', () => {
+          if (window.speechSynthesis.speaking) {
+            window.speechSynthesis.cancel();
+          }
+          speech.text = storyText;
+          speech.lang = 'id-ID';
+          speech.rate = 0.9;
+          speech.pitch = 1;
+          speech.volume = 1;
+
+          speech.onend = function () {
+            stopBtn.style.display = 'none';
+            listenBtn.style.display = 'inline-block';
+          };
+
+          window.speechSynthesis.speak(speech);
+          listenBtn.style.display = 'none';
+          stopBtn.style.display = 'inline-block';
+        });
+
+        stopBtn.addEventListener('click', () => {
+          window.speechSynthesis.cancel();
           stopBtn.style.display = 'none';
           listenBtn.style.display = 'inline-block';
-        };
-
-        window.speechSynthesis.speak(speech);
-        listenBtn.style.display = 'none';
-        stopBtn.style.display = 'inline-block';
+        });
+      }).catch(err => {
+        content.innerHTML = `<p>Terjadi kesalahan: ${err.message}</p>`;
       });
-
-      stopBtn.addEventListener('click', () => {
-        window.speechSynthesis.cancel();
-        stopBtn.style.display = 'none';
-        listenBtn.style.display = 'inline-block';
-      });
-    });
+    }
   </script>
 
 </body>
