--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ h1 {
     box-shadow: 0 8px 24px rgba(0,191,165,0.5);
 }
 .card img {
-    width: 160px;
-    height: 200px;
+    width: 140px;
+    height: 180px;
     object-fit: cover;
     border-radius: 8px;
     background: #262626;
@@ -113,128 +113,24 @@ h1 {
     margin-bottom: 8px;
 }
 .card h2 {
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-align: center;
     margin: 4px 0;
     color: #00bfa5;
 }
 .card .author {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     color: #b0bec5;
     text-align: center;
     margin-bottom: 4px;
 }
 .card .category {
-    font-size: 0.75rem;
+    font-size: 0.7rem;
     background: rgba(0,191,165,0.2);
     color: #00bfa5;
-    padding: 2px 8px;
+    padding: 2px 6px;
     border-radius: 12px;
     text-align: center;
-}
-
-/* Modal */
-.modal-overlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.85);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 2000;
-    padding: 24px;
-}
-.modal-overlay.show {
-    display: flex;
-}
-.modal {
-    background: #181818;
-    border-radius: 16px;
-    max-width: 800px;
-    width: 100%;
-    max-height: 90vh;
-    overflow-y: auto;
-    box-shadow: 0 32px 80px rgba(0,191,165,0.8);
-    padding: 32px;
-    color: #e0e0e0;
-    position: relative;
-}
-.modal-content {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-.modal-header {
-    display: flex;
-    gap: 24px;
-}
-.modal-cover {
-    width: 200px;
-    height: 280px;
-    object-fit: cover;
-    border-radius: 8px;
-    box-shadow: 0 16px 32px rgba(0,191,165,0.5);
-    flex-shrink: 0;
-}
-.modal-info {
-    flex: 1;
-}
-.modal h2 {
-    margin-top: 0;
-    font-size: 2rem;
-    background: linear-gradient(135deg, #e040fb, #00bfa5);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.modal .author {
-    font-size: 1.2rem;
-    color: #b0bec5;
-    margin-bottom: 12px;
-}
-.modal .category {
-    display: inline-block;
-    background: rgba(0,191,165,0.2);
-    color: #00bfa5;
-    padding: 6px 16px;
-    border-radius: 20px;
-    font-size: 0.9rem;
-    margin-bottom: 16px;
-}
-.modal .description {
-    font-size: 1rem;
-    color: #b0bec5;
-    white-space: pre-wrap;
-    line-height: 1.6;
-}
-.modal .btn-download {
-    background: linear-gradient(135deg, #00bfa5, #e040fb);
-    border: none;
-    padding: 14px 28px;
-    border-radius: 12px;
-    color: #121212;
-    font-weight: 700;
-    font-size: 1.1rem;
-    cursor: pointer;
-    width: 100%;
-    margin-top: 16px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.modal .btn-download:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 10px 30px #00bfa5;
-}
-.modal .close-btn {
-    position: absolute;
-    top: 16px;
-    right: 16px;
-    background: transparent;
-    border: none;
-    font-size: 28px;
-    color: #b0bec5;
-    cursor: pointer;
-}
-.modal .close-btn:hover {
-    color: #00bfa5;
 }
 
 /* Footer */
@@ -250,34 +146,36 @@ footer a {
     margin: 0 10px;
 }
 
+/* Modal tetap sama */
+
 /* Responsive */
+@media (max-width: 600px) {
+    .ebook-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+    }
+    .card img {
+        width: 120px;
+        height: 160px;
+    }
+    .card h2 {
+        font-size: 0.8rem;
+    }
+    .card .author {
+        font-size: 0.7rem;
+    }
+    .card .category {
+        font-size: 0.65rem;
+    }
+}
 @media (min-width: 768px) {
     .ebook-grid {
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
         gap: 20px;
     }
     .card img {
-        width: 100px;
-        height: 1600px;
-    }
-}
-@media (max-width: 480px) {
-    header .logo {
-        font-size: 22px;
-    }
-    header nav input[type="search"] {
-        padding: 4px 10px;
-        font-size: 13px;
-        height: 32px;
-        border-radius: 16px;
-    }
-    h1 {
-        font-size: 1.8rem;
-        margin-top: 6px;
-    }
-    .card img {
-        width: 80px;
-        height: 100px;
+        width: 180px;
+        height: 240px;
     }
 }
 
