--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ footer a {
 </head>
 <body>
   <header>
-    <div class="logo">Cerita Collection</div>
+    <div class="logo">Story Collection</div>
     <nav>
       <input type="search" id="search-input" placeholder="Cari judul atau genre..." />
     </nav>
