--- a/about.html
+++ b/about.html
@@ -7,15 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>AMDF.Group</header>
-<main>
-  <h2>Tentang Kami</h2>
-  <p>
-    <strong>AMDF.Group</strong> adalah sebuah platform yang didirikan pada tahun 2023 oleh para siswa SMK teknik elektronika.
-    Website ini bertujuan untuk memamerkan cerita-cerita fantasi karya anak bangsa. Dengan semangat kreativitas, kami berusaha
-    menyalurkan bakat menulis dan menggandeng teman-teman yang memiliki potensi dalam dunia literasi, khususnya dalam genre fantasi.
-    AMDF.Group menjadi tempat berkumpulnya para kreator muda untuk berbagi ide, cerita, dan inspirasi agar dapat dinikmati masyarakat luas.
-  </p>
-</main>
+  <header>AMDF.Group</header>
+  <main>
+    <h2>Tentang Kami</h2>
+    <p>
+      <strong>AMDF.Group</strong> adalah sebuah platform yang didirikan pada tahun 2023 oleh para siswa SMK teknik elektronika.
+      Website ini bertujuan untuk memamerkan cerita-cerita fantasi karya anak bangsa. Dengan semangat kreativitas, kami berusaha
+      menyalurkan bakat menulis dan menggandeng teman-teman yang memiliki potensi dalam dunia literasi, khususnya dalam genre fantasi.
+      AMDF.Group menjadi tempat berkumpulnya para kreator muda untuk berbagi ide, cerita, dan inspirasi agar dapat dinikmati masyarakat luas.
+    </p>
+    <a class="btn-kembali" href="index.html">⬅ Kembali</a>
+  </main>
 </body>
 </html>
